--- a/src/ui/public/index.html
+++ b/src/ui/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Short Video Maker - Create amazing short videos"
+      content="Video Maker - Create amazing videos"
     />
-    <title>Short Video Maker</title>
+    <title>Video Maker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
